--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,8 @@ jobs:
           cache: 'npm'
       - name: setup
         run: make setup
-      - name: start app
-        run: make start
+      # - name: start app
+      #   run: make start
 # run parallel tests
       - name: run tests
         run: make test
